2007-11-20  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimplevelstool.[ch]: use a GimpHandleBar widget for
	the output sliders. Removes a bunch of code already, more to
	come...

2007-11-20  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/t-o-p-logo.scm: applied patch from
	Ulf-D. Ehlert that fixes the background color used in the Particle
	Trace filter (bug #498282).

2007-11-20  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcolorbar.c (gimp_color_bar_expose): added const
	qualifiers.

2007-11-20  Michael Natterer  <mitch@gimp.org>

	* app/widgets/widgets-types.h
	* app/widgets/Makefile.am
	* app/widgets/gimphandlebar.[ch]: new widget implementing the slider
	bar known from histogram and levels.

	* app/widgets/gimphistogrambox.[ch]: use the new widget. General
	cleanup and UI streamlining.

2007-11-20  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcolorbar.c
	* app/widgets/gimphistogramview.c: cosmetic.

2007-11-19  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcurveview.[ch]: draw a base-line with the grid.
	Not sure if this should stay enabled for the Curves tool...

2007-11-19  Tor Lillqvist  <tml@novell.com>

	* libgimpwidgets/gimpcolorscale.c (gimp_color_scale_render_stipple):
	Don't write past end of buffer (bug #399484).

2007-11-18  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangleselecttool.c: Cosmitics. More strictly
	align static function prototypes and consistently use the name
	rect_sel_tool for pointers to GimpRectSelectTool.

2007-11-18  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* libgimp/gimp.def: forgot in previous commit

2007-11-18  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* tools/pdbgen/pdb/vectors.pdb:  add code for
	vectors-export-to-file and vectors-export-to-string, as
	requested in bug #497159.

	* app/pdb/vectors_cmds.c
	* app/pdb/internal_procs.c
	* libgimp/gimpvectors_pdb.c
	* libgimp/gimpvectors_pdb.h: rebuilt accordingly.

2007-11-18  Sven Neumann  <sven@gimp.org>
